syntax = "proto3";

package clutch.config.service.authn.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/service/authn/v1;authnv1";

import "validate/validate.proto";

message StorageConfig {
  // Encryption passphrase for credentials stored in the database.
  string encryption_passphrase = 1 [ (validate.rules).string = {min_bytes : 1} ];
}
